--- a/tPU/Makefile
+++ b/tPU/Makefile
@@ -1,4 +1,3 @@
-.SUFFIXES: .c .o
  
 OBJS = main.o CCode.o CDecode.o CRegister.o CMemory.o CExecute.o
 TARGET = tpu
@@ -6,8 +5,6 @@ CXX = g++
 CXXFLAGS = -W -Wall -O2
 
 print-%: ; @echo $*=$($*)
-
-all: $(TARGET)
 
 $(TARGET): $(OBJS)
 	$(CXX) $(CXXFLAGS) -o $@ $^
@@ -27,11 +24,12 @@ clean:
 
 run:
 	@echo "Executing"
-#./$(TARGET) file.bin 12
-	./$(TARGET) test.bin 19
+	./$(TARGET) file.bin 20
+
+.cpp.o:
+	$(CXX) $(CXXFLAGS) -c $<
 
 help:
-	@echo "make all"
 	@echo "make assem"
-	@echo "make clean"
 	@echo "make run"
+	@echo "make clean"
